fixed huge gaps

--- a/CSS/stylegit.css
+++ b/CSS/stylegit.css
@@ -33,7 +33,6 @@ h2{
 
 h3{
   font-size: 20px;
-  padding-top:8%;
   margin-bottom: 5px;
 }
 h4, p{
@@ -49,6 +48,6 @@ img{
 }
 
 p{
-   margin-bottom: 50px;
-   padding-bottom:25px;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
 }
